--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
     padding: 15px 10px;
     background-color: white;
     width: 100%;
-    z-index: 2;
+    /* z-index: 2; */
 }
 
 /* media queires */
